--- a/Laboratorium02/Laboratorium02_Zadanie/src/main/resources/templates/szablon.html
+++ b/Laboratorium02/Laboratorium02_Zadanie/src/main/resources/templates/szablon.html
@@ -6,5 +6,9 @@
     <div class="body" style="color: white;">
         Body here ...
     </div>
+<div style="display: flex; flex-wrap: wrap; justify-content: center;" class="images">
+    <img style="width:70%;" src="image/gamedev.png" />
+    <img style="width:70%;" src="image/wseiit_2.jpg" />
+</div>
 </body>
 </html>
